Document university view

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -14,17 +14,15 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <h2 class="heading-large">Documentation</h2>
+
+      <h2 class="heading-large">Manage courses designs</h2>
 
       <h3 class="heading-small">
-        <a href="/history/imported-from-ucas">UCAS course information and ‘course folding’</a>
+        <a href="/history/simplified-university-view">A university’s view</a>
       </h3>
-
-      <h3 class="heading-small">
-        <a href="/history/what-is-a-course">What is a course?</a>
-      </h3>
-
-      <h2 class="heading-large">Exploratory designs</h2>
+      <p>
+        Universities are the simplest provider. There are no schools to apply to and <a href="/history/imported-from-ucas">no course folding</a>.
+      </p>
 
       <h3 class="heading-small">
         <a href="/history/course-field-guidance">Contextual guidance for course fields</a>
@@ -39,6 +37,8 @@
       <p>
         Indicate the raw information we’ve received from UCAS, begin to explain where this must be edited and how we are handling that information.
       </p>
+
+      <h2 class="heading-large">Early designs</h2>
 
       <h3 class="heading-small">
         <a href="/history/course-with-variants">Course with fields to explain a user’s choice</a>
@@ -83,6 +83,16 @@
 
       <h3 class="heading-small">
         <a href="/history/sign-in-self-serve-registration">Self-serve registration</a>
+      </h3>
+
+      <h2 class="heading-large">Documentation</h2>
+
+      <h3 class="heading-small">
+        <a href="/history/imported-from-ucas">UCAS course information and ‘course folding’</a>
+      </h3>
+
+      <h3 class="heading-small">
+        <a href="/history/what-is-a-course">What is a course?</a>
       </h3>
     </div>
   </div>
