--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -26,7 +26,7 @@
           <li><a href="/schools">Schools</a></li>
           <!-- <li><a href="#">Default course</a></li> -->
           <li><a href="/organisation">Organisation</a></li>
-          <li><a href="#">Sign out ({{ data['training-provider-name'] }})</a></li>
+          <li><a href="#">Sign out</a></li>
         </ul>
       </nav>
     </div>
