--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -19,15 +19,11 @@
   </p>
 
   <p>
-    <a href="#">admissions@stmartinscollege.net</a><br />
-    <a href="#">https://www.stmartinscollege.net</a>
+    <a href="#">{{ data['email'] }}</a><br />
+    <a href="#">{{ data['website'] }}</a>
   </p>
 
   <p>Courses accredited by University of Sussex</p>
-
-  <p>
-    <a href="/your-organisation">Edit organisation</a>
-  </p>
 </main>
 
 {% endblock %}
