Add some fake data for screenshots

--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -130,22 +130,20 @@
         <h2 class="heading-medium" id="section-financial-support">Financial support</h3>
         <p>Not available in this prototype yet.</p>
 
-        <h2 class="heading-medium" id="section-schools">Schools</h3>
-        <p></p>
+        <!-- <h2 class="heading-medium" id="section-schools">Schools</h3> -->
 
         {% set schools = data['schools'] %}
 
-        <ul class="list">
+        <!-- <ul class="list">
           {% for school in schools %}
           <li>
             <h3 class="heading-small">
               {{ school.name }}
             </h3>
-            <a href="#">https://www.school-website.com</a>
-            <p>{{ school.description }}</p>
+            <p>{{ school.address }}</p>
           </li>
           {% endfor %}
-        </ul>
+        </ul> -->
 
         <h2 class="heading-medium" id="section-about-provider">About the training provider</h2>
 
