--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -18,6 +18,13 @@
       <h2 class="heading-large">Manage courses designs</h2>
 
       <h3 class="heading-small">
+        <a href="/history/simplified-university-view">School Direct view</a>
+      </h3>
+      <p>
+        School Direct routes are the most complex. List schools, show multiple UCAS courses per subject, show folded course summary.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/simplified-university-view">A university’s view</a>
       </h3>
       <p>
