Add school direct gallery detail

--- a/app/views/history/school-direct-view/index.html
+++ b/app/views/history/school-direct-view/index.html
@@ -12,27 +12,35 @@
   </div>
   <h1 class="heading-xlarge">{{ title }}</h1>
 
+  <div class="grid-row">
+    <div class="column-two-thirds">
+      <p>
+        School Direct routes are the most complex. List schools, show multiple UCAS courses per subject, show folded course summary.
+      </p>
+    </div>
+  </div>
+
   {{ macros.screenshot('Courses', 'courses', '/public/images/history/school-direct-view/thumbnails/01-courses.png', '/public/images/history/school-direct-view/01-courses.png', '') }}
-  
+
   {{ macros.screenshot('Course', 'course', '/public/images/history/school-direct-view/thumbnails/02-course.png', '/public/images/history/school-direct-view/02-course.png', '') }}
-  
+
   {{ macros.screenshot('Course details from ucas', 'course-details-from-ucas', '/public/images/history/school-direct-view/thumbnails/03-course-details-from-ucas.png', '/public/images/history/school-direct-view/03-course-details-from-ucas.png', '') }}
-  
+
   {{ macros.screenshot('About this course', 'about-this-course', '/public/images/history/school-direct-view/thumbnails/04-about-this-course.png', '/public/images/history/school-direct-view/04-about-this-course.png', '') }}
-  
+
   {{ macros.screenshot('About this training provider', 'about-this-training-provider', '/public/images/history/school-direct-view/thumbnails/05-about-this-training-provider.png', '/public/images/history/school-direct-view/05-about-this-training-provider.png', '') }}
-  
+
   {{ macros.screenshot('Course requirements', 'course-requirements', '/public/images/history/school-direct-view/thumbnails/06-course-requirements.png', '/public/images/history/school-direct-view/06-course-requirements.png', '') }}
-  
+
   {{ macros.screenshot('Qualification', 'qualification', '/public/images/history/school-direct-view/thumbnails/07-qualification.png', '/public/images/history/school-direct-view/07-qualification.png', '') }}
-  
+
   {{ macros.screenshot('Salary', 'salary', '/public/images/history/school-direct-view/thumbnails/08-salary.png', '/public/images/history/school-direct-view/08-salary.png', '') }}
-  
+
   {{ macros.screenshot('Preview', 'preview', '/public/images/history/school-direct-view/thumbnails/09-preview.png', '/public/images/history/school-direct-view/09-preview.png', '') }}
-  
+
   {{ macros.screenshot('Schools', 'schools', '/public/images/history/school-direct-view/thumbnails/10-schools.png', '/public/images/history/school-direct-view/10-schools.png', '') }}
-  
+
   {{ macros.screenshot('Organisation', 'organisation', '/public/images/history/school-direct-view/thumbnails/11-organisation.png', '/public/images/history/school-direct-view/11-organisation.png', '') }}
-  
+
 </main>
 {% endblock %}
