--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -10,6 +10,7 @@ $path: "/public/images/";
 @import 'patterns/check-your-answers';
 @import 'patterns/task-list';
 @import 'patterns/course-parts';
+@import 'patterns/success-summary';
 
 // Related items
 // (These styles will be moved to GOV.UK elements, duplicating here for now.)
