--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -207,3 +207,10 @@ dl.aligned dd {
   margin-bottom: 5px;
   border-bottom: 1px solid #ccc;
 }
+
+.fake-email {
+  margin-left: 15px;
+  margin-top: 20px;
+  border: 5px solid $border-colour;
+  padding: 60px;
+}
