Add contextual email to flow

--- a/app/views/history/sign-in-pre-register-user/index.html
+++ b/app/views/history/sign-in-pre-register-user/index.html
@@ -19,7 +19,11 @@
 
 {{ macros.screenshot('Admin sets permission for user', 'admin-sets-permission-for-user', '/public/images/history/sign-in-pre-register-user/thumbnails/05-admin-sets-permission-for-user.png', '/public/images/history/sign-in-pre-register-user/05-admin-sets-permission-for-user.png', '') }}
 
-{{ macros.screenshot('User receives invite email', 'user-receives-invite-email', '/public/images/history/sign-in-pre-register-user/thumbnails/06-user-receives-invite-email.png', '/public/images/history/sign-in-pre-register-user/06-user-receives-invite-email.png', '
+{{ macros.screenshot('We send an email to set context', '06a-we-send-email', '/public/images/history/sign-in-pre-register-user/thumbnails/06a-we-send-email.png', '/public/images/history/sign-in-pre-register-user/06a-we-send-email.png', '
+  <p><a href="https://docs.google.com/document/d/1J2p5luXQOpQjfuM1qN130sqDxOBpIZaM-5t4fPhuqWY/edit?usp=sharing">Google Doc with email and comments</a></p>
+') }}
+
+{{ macros.screenshot('User receives invite email', '06b-user-receives-invite-email', '/public/images/history/sign-in-pre-register-user/thumbnails/06b-user-receives-invite-email.png', '/public/images/history/sign-in-pre-register-user/06b-user-receives-invite-email.png', '
   <p>This email provides no context for the service this account relates to. eg It does not say "for publishing teacher training courses".</p>
 ') }}
 
